--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -7,7 +7,9 @@
 #  content    :text
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  user_id    :integer
 #
+
 
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
