chore: セットアップに伴い軽微な修正を行いました

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -22,7 +22,8 @@ RUN curl -sL https://github.com/nodenv/node-build/archive/master.tar.gz | tar xz
 
 # Install application gems
 COPY Gemfile Gemfile.lock ./
-RUN bundle install
+RUN bundle config set --local path '/usr/local/bundle' && \
+    bundle install
 
 # Install node modules
 COPY package.json yarn.lock ./
