--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -2,18 +2,17 @@
 #
 # Table name: articles
 #
-#  id         :integer          not null, primary key
-#  user_id    :integer          not null
-#  title      :string           not null
+#  id         :bigint           not null, primary key
 #  content    :text             not null
+#  title      :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  user_id    :bigint           not null
 #
 # Indexes
 #
 #  index_articles_on_user_id  (user_id)
 #
-
 
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
