--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+/.git-diff-log.txt
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
@@ -35,3 +36,4 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
